--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ authors = ["axect <edeftg@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-peroxide = "0.9"
+peroxide = "0.10"
+natural_unit = "0.1"
